--- a/discode-web/package.json
+++ b/discode-web/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@auth0/angular-jwt": "^5.0.2",
     "bootstrap-icons": "^1.7.0",
     "mdb-ui-kit": "^3.9.0",
     "rxjs": "~6.6.0",
