--- a/discode-backend/src/main/resources/application.properties
+++ b/discode-backend/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8008
+server.error.include-message=always
+server.error.include-stacktrace=never
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/${DISCODE_DB_NAME}?allowMultiQueries=true
 spring.datasource.username=${DISCODE_DB_USER_NAME}
