--- a/discode-web/package.json
+++ b/discode-web/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@auth0/angular-jwt": "^5.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "bootstrap-icons": "^1.7.0",
     "mdb-ui-kit": "^3.9.0",
     "rxjs": "~6.6.0",
