--- a/discode-web/package.json
+++ b/discode-web/package.json
@@ -23,6 +23,7 @@
     "bootstrap-icons": "^1.7.0",
     "mdb-ui-kit": "^3.9.0",
     "rxjs": "~6.6.0",
+    "socket.io-client": "^4.4.1",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
