--- a/discode-backend/src/main/resources/application.properties
+++ b/discode-backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=${DISCODE_BACKEND_PORT}
 server.error.include-message=always
 server.error.include-stacktrace=never
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${DISCODE_DB_HOST:localhost}:${DISCODE_DB_PORT}/${DISCODE_DB_NAME}?allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://${DISCODE_DB_HOST:localhost}:${DISCODE_DB_PORT:3306}/${DISCODE_DB_NAME}?allowMultiQueries=true
 spring.datasource.username=${DISCODE_DB_USER_NAME}
 spring.datasource.password=${DISCODE_DB_USER_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
