--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,24 +3,27 @@ version: "3.7"
 services:
   db:
     image: mysql:5.7
-    container_name: discode_db
+    container_name: discode-db
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
+      MYSQL_TCP_PORT: 3435
     ports:
-      - 3306:3306
+      - 3435:3435
     networks:
       - discode-net
     volumes:
       - ./docker/db:/docker-entrypoint-initdb.d
+      - ./docker/db/mysql:/var/lib/mysql
 
   backend:
-    container_name: discode_backend
+    container_name: discode-backend
     build:
       context: discode-backend
     restart: always
     environment:
-      DISCODE_DB_HOST: discode_db
+      DISCODE_DB_HOST: discode-db
+      DISCODE_DB_PORT: 3435
     ports:
       - 8008:8008
     networks:
@@ -29,27 +32,29 @@ services:
       - db
 
   chat:
-    container_name: discode_chat
+    container_name: discode-chat
     build:
       context: discode-chat
     restart: always
+    environment:
+      DISCODE_BACKEND_HOST: discode-backend
     ports:
       - 8010:8010
     networks:
       - discode-net
 
-  # web:
-  #   container_name: discode_web
-  #   build:
-  #     context: discode-web
-  #   restart: always
-  #   ports:
-  #     - 4200:80
-  #   networks:
-  #     - discode-net
-  #   depends_on:   
-  #     - backend
-  #     - chat
+  web:
+    container_name: discode-web
+    build:
+      context: discode-web
+    restart: always
+    ports:
+      - 4200:80
+    networks:
+      - discode-net
+    depends_on:   
+      - backend
+      - chat
 
 networks:
   discode-net:
