--- a/discode-web/package.json
+++ b/discode-web/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@auth0/angular-jwt": "^5.0.2",
+    "@ctrl/ngx-codemirror": "^5.1.1",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "bootstrap-icons": "^1.7.0",
+    "codemirror": "^5.65.0",
     "mdb-ui-kit": "^3.9.0",
     "rxjs": "~6.6.0",
     "socket.io-client": "^4.4.1",
