--- a/discode-desktop/model/CMakeLists.txt
+++ b/discode-desktop/model/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(model STATIC
     )
 
-target_include_directories(model PUBLIC)
+target_include_directories(model PUBLIC .)
 target_link_libraries(model PUBLIC)
