--- a/discode-desktop/controller/CMakeLists.txt
+++ b/discode-desktop/controller/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(controller STATIC
-        authentication_controller.cpp authentication_controller.h navigation_controller.cpp navigation_controller.h)
+        authentication_controller.cpp authentication_controller.h)
 
 target_include_directories(controller PUBLIC .)
 target_link_libraries(controller PRIVATE Qt${QT_VERSION_MAJOR}::Core network)
