--- a/discode-backend/src/main/resources/application.properties
+++ b/discode-backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.address=0.0.0.0
 server.port=${DISCODE_BACKEND_PORT}
 server.error.include-message=always
 server.error.include-stacktrace=never
