Final style changes

--- a/discode-desktop/CMakeLists.txt
+++ b/discode-desktop/CMakeLists.txt
@@ -32,7 +32,7 @@ else()
     endif()
 endif()
 
-set(QT_FEATURE_intelcet ON)
+#set(QT_FEATURE_intelcet ON)
 find_package(QT NAMES Qt6 COMPONENTS Core Quick Network REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Quick Network REQUIRED)
 
