Fix broken code modal and add docker volume to persist profile images

--- a/discode-backend/Dockerfile
+++ b/discode-backend/Dockerfile
@@ -2,5 +2,5 @@ FROM openjdk:15-jdk-alpine
 ADD .env .env
 ADD target/backend-1.0.0.war target/backend-1.0.0.war
 ADD scripts/deploy.sh scripts/deploy.sh
-ADD images/default.png images/default.png
+RUN mkdir images
 ENTRYPOINT ["scripts/deploy.sh"]
