--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 docker/db/mysql
+docker/images/profile-*
 
 *~
 *.autosave
