--- a/discode-desktop/common/CMakeLists.txt
+++ b/discode-desktop/common/CMakeLists.txt
@@ -3,7 +3,7 @@ add_library(common STATIC
     report.h
     session.h
     ban_model_roles.h
-)
+        service_ips.h service_routes.h)
 
 target_include_directories(common PUBLIC .)
 target_link_libraries(common PUBLIC Qt${QT_VERSION_MAJOR}::Core)
