--- a/discode-desktop/controller/CMakeLists.txt
+++ b/discode-desktop/controller/CMakeLists.txt
@@ -8,4 +8,4 @@ add_library(controller STATIC
 )
 
 target_include_directories(controller PUBLIC .)
-target_link_libraries(controller PRIVATE Qt${QT_VERSION_MAJOR}::Core network)
+target_link_libraries(controller PRIVATE Qt${QT_VERSION_MAJOR}::Core model network)
