--- a/discode-desktop/network/CMakeLists.txt
+++ b/discode-desktop/network/CMakeLists.txt
@@ -7,7 +7,7 @@ add_library(network STATIC
     report_service.cpp
     report_service.h
     api_config.h
-)
+        session_service.cpp session_service.h)
 
 target_include_directories(network PUBLIC .)
 target_link_libraries(network PUBLIC Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Network common)
