--- a/discode-desktop/CMakeLists.txt
+++ b/discode-desktop/CMakeLists.txt
@@ -24,7 +24,7 @@ if (MSVC)
         add_compile_options(/Od)
     endif()
 else()
-    add_compile_options(-Wall -Wextra -Wpedantic -Wuninitialized -Wshadow -Wunused -fpermissive)
+    add_compile_options(-Wall -Wextra -Wpedantic -Wuninitialized -Wshadow -Wunused)
     if (CMAKE_BUILD_TYPE MATCHES Debug)
         add_compile_options(-Og)
     else()
