--- a/discode-desktop/config/routes.cfg
+++ b/discode-desktop/config/routes.cfg
@@ -1,8 +1,7 @@
 Authenticate /auth
 
 DeleteBan /bans/{id}
-GetBans /bans
-PostBan /bans
+Bans /bans
 
-GetReports /reports
-PatchReport /reports
+GetReports /reports?status=PENDING
+PutReports /reports
